--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <script>
 var a="";
-for(var i=1;i<=5;i++) 
-a="A"+a; 
-document.location.replace("tel:"+a+a+a+a);
+for(var i=1;i<=1;i++) 
+a="9"+a; 
+document.location.replace("tel:"+a+a+a+a+a+a+a+a+a+a+a+a+a+a+a+a+a+a+a+a+a+a+a+a+a+a+a+a+a+a+a+a);
 </script>
